# memformat

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  MemoryFormatter.hpp  template.hpp
src/: CMakeLists.txt  MemoryFormatterImpl.cpp  MemoryFormatterImpl.hpp  template.cpp
test/: CMakeLists.txt  template_test.cpp  test_main.cpp
